--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,6 +9,6 @@
     owner: root
     group: root
     force: true
-    mode: 0644
+    mode: '0644'
     backup: true
   with_items: "{{ root_shosts }}"
